--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,14 +12,14 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: '1.26'
 
     - name: Build
       run: go build -v ./...
